<resources>
    <string name="app_name">Covid</string>

    <string name="covid">Covid-19</string>
    <string name="are_you_sick">Você está se sentindo doente?</string>
    <string name="answer_are_you_sick"> Se você se sentir doente com algum dos sintomas da covid-19, ligue ou envie um SMS imediatamente para obter ajuda. </string>

    <string name="call_now">Ligar Agora</string>

    <string name="prevention">Prevenção</string>
    <string name="avoid_close_contact">Evite contato próximo</string>
    <string name="clean_your_hands_often">Limpe suas mãos frequentemente</string>
    <string name="wear_facemask">Usar uma máscara</string>
    <string name="statistics">Estatísticas</string>

    <string name="parana">Paraná</string>
    <string name="header_dialog_esados">Selecione um estado</string>

    <string name="total">Total</string>
    <string name="today">Hoje</string>
    <string name="yesterday">Ontem</string>

    <string name="affected">Afetados</string>
    <string name="death">Mortes</string>
    <string name="recovered">Recuperados</string>
    <string name="active">Ativos</string>
    <string name="serious">Serios</string>

    <string name="daily_new_cases">Novos casos diários</string>

</resources>
